--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://reverentengineer.com"
-title = "reverent engineer"
+title = "Reverent Engineer"
 theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
