Change url in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://reverentengineer.com"
+baseurl = "https://jeff.caffreyhill.com"
 title = "Reverent Engineer"
 theme = "hugo-coder"
 languagecode = "en"
