--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ pygmentscodefencesguesssyntax = true
     info = "Software Engineer"
     description = "Jeff Caffrey-Hill: Software Engineer, blog and portfolio"
     keywords = "blog,developer,personal,portfolio"
-    avatarurl = "images/avatar.png"
+    avatarurl = "/images/avatar.jpeg"
 
     favicon_32 = "/img/favicon-32x32.png"
     favicon_16 = "/img/favicon-16x16.png"
